--- a/miniprogram/components/action-card/index.wxml
+++ b/miniprogram/components/action-card/index.wxml
@@ -3,9 +3,8 @@
   <view class="card-content">
     <view class="card-header">
       <text class="card-name">{{action.name}}</text>
-      <text class="card-role">{{action.role}}</text>
     </view>
-    <view class="card-title">{{action.title || action.bio}}</view>
+    <view class="card-title">{{displayTitle}}</view>
     <view class="card-tags">
       <view wx:for="{{action.tags}}" wx:key="*this" class="tag">{{item}}</view>
     </view>
